--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -82,3 +82,50 @@ div {
 label {
   display: block;
 }
+.btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:visited {
+  background: #f0c699 !important;
+  color : black !important;
+  border-color: #4d3518 !important;
+  border-width: medium !important;
+  alignment: inherit !important;
+}
+
+.navbar-inverse, .navbar-nav, .nav>li>a{
+  background: #e4a86c !important;
+  border-color: #e4a86c !important;
+  color: white !important;
+}
+
+
+.navbar-home {
+  font-size: large !important;
+  align-content: center !important;
+  alignment: center !important;
+  align-self: center !important;
+  color: white !important;
+  margin-top: 5px !important;
+  text-decoration-color: white !important;
+
+}
+
+
+td {
+  border-color: transparent !important;
+  border-width: thick !important;
+  margin: 5px !important;
+}
+
+.btn-table {
+  width: 200px !important;
+}
+
+.right-header {
+  float: right !important;
+  text-wrap: normal;
+  wrap-option: wrap;
+}
+
+.div-child {
+  height: 100% !important;
+  display: inline-block !important;
+}
