--- a/app/views/promises/index.html.erb
+++ b/app/views/promises/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Promises</h1>
 
-<table>
+<table class="table table-striped table-hover">
   <thead>
     <tr>
       <th>Name</th>
@@ -32,4 +32,4 @@
 
 <br>
 
-<%= link_to 'New Promise', new_promise_path %>
+<%= link_to 'New Promise', new_promise_path  , { :class=>"btn btn-primary" } %>
