--- a/app/views/user_fund_projects/edit.html.erb
+++ b/app/views/user_fund_projects/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', user_fund_project: @user_fund_project %>
 
-<%= link_to 'Show', @user_fund_project %> |
-<%= link_to 'Back', user_fund_projects_path %>
+<%= link_to 'Show', @user_fund_project   , { :class=>"btn btn-primary" }%> |
+<%= link_to 'Back', user_fund_projects_path   , { :class=>"btn btn-primary" }%>
