--- a/app/views/user_fund_projects/new.html.erb
+++ b/app/views/user_fund_projects/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', user_fund_project: @user_fund_project %>
 
-<%= link_to 'Back', user_fund_projects_path %>
+<%= link_to 'Back', user_fund_projects_path  , { :class=>"btn btn-primary" } %>
