--- a/app/views/user_projects/edit.html.erb
+++ b/app/views/user_projects/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', user_project: @user_project %>
 
-<%= link_to 'Show', @user_project %> |
-<%= link_to 'Back', user_projects_path %>
+<%= link_to 'Show', @user_project  , { :class=>"btn btn-primary" } %>
+<%= link_to 'Back', user_projects_path  , { :class=>"btn btn-primary" } %>
