--- a/app/views/userpasswords/edit.html.erb
+++ b/app/views/userpasswords/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', userpassword: @userpassword %>
 
-<%= link_to 'Show', @userpassword %> |
-<%= link_to 'Back', userpasswords_path %>
+<%= link_to 'Show', @userpassword   , { :class=>"btn btn-primary" }%>
+<%= link_to 'Back', userpasswords_path   , { :class=>"btn btn-primary" }%>
