--- a/app/views/userpasswords/new.html.erb
+++ b/app/views/userpasswords/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', userpassword: @userpassword %>
 
-<%= link_to 'Back', userpasswords_path %>
+<%= link_to 'Back', userpasswords_path   , { :class=>"btn btn-primary" }%>
