--- a/app/views/userpasswords/show.html.erb
+++ b/app/views/userpasswords/show.html.erb
@@ -10,5 +10,5 @@
   <%= @userpassword.user %>
 </p>
 
-<%= link_to 'Edit', edit_userpassword_path(@userpassword) %> |
-<%= link_to 'Back', userpasswords_path %>
+<%= link_to 'Edit', edit_userpassword_path(@userpassword)   , { :class=>"btn btn-primary" }%>
+<%= link_to 'Back', userpasswords_path  , { :class=>"btn btn-primary" } %>
