--- a/app/views/wishlist_projects/edit.html.erb
+++ b/app/views/wishlist_projects/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', wishlist_project: @wishlist_project %>
 
-<%= link_to 'Show', @wishlist_project %> |
-<%= link_to 'Back', wishlist_projects_path %>
+<%= link_to 'Show', @wishlist_project   , { :class=>"btn btn-primary" }%>
+<%= link_to 'Back', wishlist_projects_path   , { :class=>"btn btn-primary" }%>
