--- a/app/views/wishlist_projects/new.html.erb
+++ b/app/views/wishlist_projects/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', wishlist_project: @wishlist_project %>
 
-<%= link_to 'Back', wishlist_projects_path %>
+<%= link_to 'Back', wishlist_projects_path   , { :class=>"btn btn-primary" }%>
