--- a/app/views/promises/edit.html.erb
+++ b/app/views/promises/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', promise: @promise %>
 
-<%= link_to 'Show', @promise %> |
-<%= link_to 'Back', promises_path %>
+<%= link_to 'Show', @promise   , { :class=>"btn btn-primary" }%>
+<%= link_to 'Back', promises_path   , { :class=>"btn btn-primary" }%>
