--- a/app/views/promises/new.html.erb
+++ b/app/views/promises/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', promise: @promise %>
 
-<%= link_to 'Back', promises_path %>
+<%= link_to 'Back', promises_path  , { :class=>"btn btn-primary" } %>
