--- a/app/views/user_fund_projects/show.html.erb
+++ b/app/views/user_fund_projects/show.html.erb
@@ -10,5 +10,5 @@
   <%= @user_fund_project.project %>
 </p>
 
-<%= link_to 'Edit', edit_user_fund_project_path(@user_fund_project) %> |
-<%= link_to 'Back', user_fund_projects_path %>
+<%= link_to 'Edit', edit_user_fund_project_path(@user_fund_project)   , { :class=>"btn btn-primary" }%> |
+<%= link_to 'Back', user_fund_projects_path  , { :class=>"btn btn-primary" } %>
