--- a/app/views/user_projects/index.html.erb
+++ b/app/views/user_projects/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>User Projects</h1>
 
-<table>
+<table class="table table-striped table-hover">
   <thead>
     <tr>
       <th>User</th>
@@ -26,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New User Project', new_user_project_path %>
+<%= link_to 'New User Project', new_user_project_path   , { :class=>"btn btn-primary" }%>
