--- a/app/views/user_projects/new.html.erb
+++ b/app/views/user_projects/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', user_project: @user_project %>
 
-<%= link_to 'Back', user_projects_path %>
+<%= link_to 'Back', user_projects_path   , { :class=>"btn btn-primary" }%>
