--- a/app/views/user_roles/index.html.erb
+++ b/app/views/user_roles/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>User Roles</h1>
 
-<table>
+<table class="table table-striped table-hover">
   <thead>
     <tr>
       <th>Is admin</th>
@@ -26,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New User Role', new_user_role_path %>
+<%= link_to 'New User Role', new_user_role_path   , { :class=>"btn btn-primary" }%>
