--- a/app/views/user_roles/show.html.erb
+++ b/app/views/user_roles/show.html.erb
@@ -10,5 +10,5 @@
   <%= @user_role.user %>
 </p>
 
-<%= link_to 'Edit', edit_user_role_path(@user_role) %> |
-<%= link_to 'Back', user_roles_path %>
+<%= link_to 'Edit', edit_user_role_path(@user_role)   , { :class=>"btn btn-primary" }%>
+<%= link_to 'Back', user_roles_path   , { :class=>"btn btn-primary" }%>
