--- a/app/views/wishlist_projects/index.html.erb
+++ b/app/views/wishlist_projects/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Wishlist Projects</h1>
 
-<table>
+<table class="table table-striped table-hover">
   <thead>
     <tr>
       <th>Wishlist</th>
@@ -26,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New Wishlist Project', new_wishlist_project_path %>
+<%= link_to 'New Wishlist Project', new_wishlist_project_path   , { :class=>"btn btn-primary" }%>
