--- a/app/views/wishlist_projects/show.html.erb
+++ b/app/views/wishlist_projects/show.html.erb
@@ -10,5 +10,5 @@
   <%= @wishlist_project.project %>
 </p>
 
-<%= link_to 'Edit', edit_wishlist_project_path(@wishlist_project) %> |
-<%= link_to 'Back', wishlist_projects_path %>
+<%= link_to 'Edit', edit_wishlist_project_path(@wishlist_project)   , { :class=>"btn btn-primary" }%>
+<%= link_to 'Back', wishlist_projects_path   , { :class=>"btn btn-primary" }%>
