--- a/app/views/wishlists/index.html.erb
+++ b/app/views/wishlists/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Wishlists</h1>
 
-<table>
+<table class="table table-striped table-hover">
   <thead>
     <tr>
       <th>User</th>
@@ -26,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New Wishlist', new_wishlist_path %>
+<%= link_to 'New Wishlist', new_wishlist_path  , { :class=>"btn btn-primary" } %>
