--- a/app/views/wishlists/show.html.erb
+++ b/app/views/wishlists/show.html.erb
@@ -10,5 +10,5 @@
   <%= @wishlist.project %>
 </p>
 
-<%= link_to 'Edit', edit_wishlist_path(@wishlist) %> |
-<%= link_to 'Back', wishlists_path %>
+<%= link_to 'Edit', edit_wishlist_path(@wishlist)   , { :class=>"btn btn-primary" }%>
+<%= link_to 'Back', wishlists_path  , { :class=>"btn btn-primary" } %>
