--- a/app/views/projects/index_by_cat.html.erb
+++ b/app/views/projects/index_by_cat.html.erb
@@ -18,7 +18,7 @@
   </thead>
 
   <tbody>
-    <% @projects.each do |project| %>
+    <% @projects_by_c.each do |project| %>
       <tr>
         <td><%= project.title %></td>
         <td><%= project.markdown %></td>
@@ -27,7 +27,7 @@
         <td><%= project.currentamount %></td>
         <td><%= project.approved %></td>
         <td><%= project.deadline %></td>
-        <td><%= project.category.name %></td>
+        <td><%= project.category %></td>
         <td><%= link_to 'Show', project %></td>
         <td><%= link_to 'Edit', edit_project_path(project) %></td>
         <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
