--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">My Info<span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><%= link_to "My info", '/users/%s' % [current_user[:id]] , method: :get %> </li>
-            <li><a href="/projects">My Projects</a></li>
+            <li><%= link_to "My Projects", '/users/%s/projects/' % [current_user[:id]] , method: :get %> </li>
           </ul>
         </li>
           <% else %>
