not admin users cannot edit-destroy projects

--- a/app/views/promises/show.html.erb
+++ b/app/views/promises/show.html.erb
@@ -22,7 +22,7 @@
 
 <p>
   <strong>Project:</strong>
-  <%= @promise.project %>
+  <%= @promise.project.name %>
 </p>
 
 <%= link_to 'Edit', edit_promise_path(@promise)   , { :class=>"btn btn-primary" }%> |
