--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,6 +41,18 @@
           <% else %>
           <li class=""><a href="/users/sign_in">My Info</a></li>
         <% end %>
+        <% if user_signed_in? %>
+          <% if current_user.user_role.is_admin%>
+            <li class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" href="#">Admin<span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><%= link_to "Users", '/users/', method: :get %> </li>
+                <li><%= link_to "Projects", '/projects' % [current_user[:id]], method: :get %> </li>
+                <li><%= link_to "Categories", '/users/%s' % [current_user[:id]], method: :get %> </li>
+              </ul>
+            </li>
+          <% end %>
+        <% end %>
 
       </ul>
       <ul class = "nav navbar-nav navbar-home navbar-light right-header" >
