--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -47,7 +47,7 @@
   </div>
 
   <div class="field">
-    <%= form.label :category_id %>
+    <%= form.label :category %>
     <%= form.text_field :category_id %>
   </div>
 
