--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -13,6 +13,7 @@
       <th>Approved</th>
       <th>Deadline</th>
       <th>Category</th>
+      <th>User</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -28,14 +29,23 @@
         <td><%= project.approved %></td>
         <td><%= project.deadline %></td>
         <td><%= project.category.name %></td>
+        <td><%= project.user_project.user.name %></td>
         <td><%= link_to 'Show', project %></td>
+        <% if user_signed_in? %>
+          <% if current_user.user_role.is_admin%>
         <td><%= link_to 'Edit', edit_project_path(project) %></td>
         <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <% end %>
+
+        <% end %>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New Project', new_project_path   , { :class=>"btn btn-primary" }%>
+<% if user_signed_in? %>
+  <%= link_to 'New Project', new_project_path , { :class=>"btn btn-primary" }%>
+<% else %>
+  <%=  link_to 'New Project', new_user_session_path, { :class=>"btn btn-primary" }%>
+<% end %>
