--- a/app/views/projects/index_by_cat.html.erb
+++ b/app/views/projects/index_by_cat.html.erb
@@ -27,7 +27,7 @@
         <td><%= project.currentamount %></td>
         <td><%= project.approved %></td>
         <td><%= project.deadline %></td>
-        <td><%= project.category %></td>
+        <td><%= project.category.name %></td>
         <td><%= link_to 'Show', project %></td>
         <td><%= link_to 'Edit', edit_project_path(project) %></td>
         <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
