--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -37,7 +37,7 @@
 
 <p>
   <strong>Category:</strong>
-  <%= @project.category %>
+  <%= @project.category.name %>
 </p>
 
 <%= link_to 'Edit', edit_project_path(@project)  , { :class=>"btn btn-primary" } %> |
