--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,9 +2,15 @@
 
 <h1>Users</h1>
 
-<table>
+<table class="table table-striped table-hover">
   <thead>
     <tr>
+      <th>Name</th>
+      <th>Last Name</th>
+      <th>Phone</th>
+      <th>Gender</th>
+      <th>Description</th>
+      <th>Birthday</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -12,6 +18,12 @@
   <tbody>
     <% @users.each do |user| %>
       <tr>
+        <td><%= user.name %></td>
+        <td><%= user.last_name %></td>
+        <td><%= user.phone %></td>
+        <td><%= user.gender %></td>
+        <td><%= user.description %></td>
+        <td><%= user.birthday %></td>
         <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
         <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
