--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,7 @@
           <li class=""><a href="/users/sign_in">My Info</a></li>
         <% end %>
         <% if user_signed_in? %>
-          <% if current_user.user_role.is_admin%>
+          <% if current_user.is_admin%>
             <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown" href="#">Admin<span class="caret"></span></a>
               <ul class="dropdown-menu">
