--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -32,7 +32,7 @@
         <td><%= project.user_project.user.name %></td>
         <td><%= link_to 'Show', project %></td>
         <% if user_signed_in? %>
-          <% if current_user.user_role.is_admin%>
+          <% if current_user.is_admin%>
         <td><%= link_to 'Edit', edit_project_path(project) %></td>
         <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
             <% end %>
