--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -40,5 +40,43 @@
   <%= @project.category.name %>
 </p>
 
-<%= link_to 'Edit', edit_project_path(@project)  , { :class=>"btn btn-primary" } %> |
-<%= link_to 'Back', projects_path   , { :class=>"btn btn-primary" }%>
+<h3>Promises</h3>
+<% if not @promises.nil? %> <!-- no se si esto esta bien, arreglar -->
+<table class="table table-striped table-hover">
+  <thead>
+  <tr>
+    <th>Name</th>
+    <th>Amount</th>
+    <th>Description</th>
+    <th>Etd</th>
+    <th>Project</th>
+    <th colspan="3"></th>
+  </tr>
+  </thead>
+
+  <tbody>
+  <% @promises.each do |promise| %>
+    <tr>
+      <td><%= promise.name %></td>
+      <td><%= promise.amount %></td>
+      <td><%= promise.description %></td>
+      <td><%= promise.etd %></td>
+      <td><%= promise.project.title %></td>
+      <td><%= link_to 'Show', promise %></td>
+      <% if user_signed_in? %>
+        <% if current_user.is_admin %>
+          <td><%= link_to 'Edit', edit_promise_path(promise) %></td>
+          <td><%= link_to 'Destroy', promise, method: :delete, data: {confirm: 'Are you sure?'} %></td>
+        <% end %>
+
+      <% end %>
+      <% end %>
+    </tr>
+  </tbody>
+</table>
+  <% else %>
+  <p> There are no promises for this project</p>
+<% end %>
+
+<%= link_to 'Edit', edit_project_path(@project)  , { :class=>"btn btn-primary" } %>
+<%= link_to 'Back', projects_path, {:class => "btn btn-primary"} %>
