--- a/app/views/promises/edit.html.erb
+++ b/app/views/promises/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form', promise: @promise %>
 
 <%= link_to 'Show', @promise   , { :class=>"btn btn-primary" }%>
-<%= link_to 'Back', promises_path   , { :class=>"btn btn-primary" }%>
+<%= link_to 'Back', projects_path, {:class => "btn btn-primary"} %>
