--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -1,22 +1,25 @@
-<%= form_with(model: category, local: true) do |form| %>
+
+
+<%= form_for( @category, url: {action: "create"}) do |f| %>
   <% if category.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(category.errors.count, "error") %> prohibited this category from being saved:</h2>
 
       <ul>
-      <% category.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
+        <% category.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name %>
+  <div>
+    <%= f.label :name %>
+    <%= f.text_field :name %>
   </div>
-
-  <div class="actions">
-    <%= form.submit %>
+  <br>
+  <div>
+    <%= f.submit %>
   </div>
+  <br>
+
 <% end %>
