--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -80,3 +80,4 @@
 
 <%= link_to 'Edit', edit_project_path(@project)  , { :class=>"btn btn-primary" } %>
 <%= link_to 'Back', projects_path, {:class => "btn btn-primary"} %>
+<%= link_to 'New Promise', new_promise_path, {:class => "btn btn-primary"} %>
