--- a/app/views/promises/_form.html.erb
+++ b/app/views/promises/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: promise, local: true) do |form| %>
+<%= form_for( @promise, url: {action: "create"})  do |form| %>
   <% if promise.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(promise.errors.count, "error") %> prohibited this promise from being saved:</h2>
@@ -10,33 +10,36 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
+<br>
+  <div>
     <%= form.label :name %>
     <%= form.text_field :name %>
   </div>
-
-  <div class="field">
+<br>
+  <div>
     <%= form.label :amount %>
     <%= form.number_field :amount %>
   </div>
-
-  <div class="field">
+<br>
+  <div>
     <%= form.label :description %>
     <%= form.text_area :description %>
   </div>
-
-  <div class="field">
+<br>
+  <div>
     <%= form.label :etd %>
     <%= form.date_select :etd %>
   </div>
-
-  <div class="field">
+<br>
+  <div>
     <%= form.label :project_id %>
     <%= form.text_field :project_id %>
   </div>
-
+<br>
   <div class="actions">
     <%= form.submit %>
   </div>
+  <br>
 <% end %>
+
+
