--- a/app/views/promises/show.html.erb
+++ b/app/views/promises/show.html.erb
@@ -22,8 +22,8 @@
 
 <p>
   <strong>Project:</strong>
-  <%= @promise.project.name %>
+  <%= @project.title %>
 </p>
 
 <%= link_to 'Edit', edit_promise_path(@promise)   , { :class=>"btn btn-primary" }%> |
-<%= link_to 'Back', promises_path  , { :class=>"btn btn-primary" } %>
+<%= link_to 'Back', projects_path, {:class => "btn btn-primary"} %>
