--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 <div class="container-fluid">
-  <div style="float: left; border-width: thick">
-  <%= image_tag @user.avatar.url(:medium)%>
-</div>
+  <div style="float: left;">
+    <%= image_tag @user.avatar.url(:medium)%>
+  </div>
   <div style="float: left">
     <br>
   </div>
