--- a/app/views/promises/_form.html.erb
+++ b/app/views/promises/_form.html.erb
@@ -16,6 +16,11 @@
     <%= form.text_field :name %>
   </div>
 <br>
+  <div class="field">
+    <%= form.label :avatar %>
+    <%= form.file_field :avatar %>
+  </div>
+  <br>
   <div>
     <%= form.label :amount %>
     <%= form.number_field :amount %>
