--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -15,7 +15,10 @@
     <%= form.label :title %>
     <%= form.text_field :title %>
   </div>
-
+  <div class="field">
+    <%= form.label :avatar %>
+    <%= form.file_field :avatar %>
+  </div>
   <div class="field">
     <%= form.label :markdown %>
     <%= form.text_area :markdown %>
@@ -44,7 +47,7 @@
 
   <div class="field">
     <%= form.label :category %>
-    <%= form.text_field :category_id %>
+    <%= form.collection_check_boxes :category_ids, Category.all, :id, :name %>
   </div>
 
   <div class="actions">
