--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -42,13 +42,15 @@
 
   <p>
     <strong>Category:</strong>
-    <%= @project.category.name %>
+    <% @categories.each do |c| %>
+    <%= c.name %>
+      <% end %>
   </p>
   </div>
 </div>
 </div>
 <h3>Promises</h3>
-<% if not @promises.nil? %> <!-- no se si esto esta bien, arreglar -->
+<% if (not @promises.nil?) && (not @promises.empty?) %> <!-- no se si esto esta bien, arreglar -->
 <table class="table table-striped table-hover">
   <thead>
   <tr>
@@ -75,7 +77,6 @@
           <td><%= link_to 'Edit', edit_promise_path(promise) %></td>
           <td><%= link_to 'Destroy', promise, method: :delete, data: {confirm: 'Are you sure?'} %></td>
         <% end %>
-
       <% end %>
       <% end %>
     </tr>
@@ -87,4 +88,8 @@
 
 <%= link_to 'Edit', edit_project_path(@project)  , { :class=>"btn btn-primary" } %>
 <%= link_to 'Back', projects_path, {:class => "btn btn-primary"} %>
-<%= link_to 'New Promise', new_promise_path, {:class => "btn btn-primary"} %>
+<% if user_signed_in? %>
+  <% if current_user.is_admin || UserProject.find_by_project_id(@project.id).user_id == current_user.id %>
+    <%= link_to 'New Promise', new_promise_path, {:class => "btn btn-primary"} %>
+  <% end %>
+<% end %>
