--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -32,8 +32,14 @@
   </div>
 
   <div class="field">
+    Not working xd
     <%= form.label :gender %>
-    <%= form.text_field :gender %>
+    <%= form.radio_button(:gender, "M") %>
+    <%= form.label(:gender_m, "Male") %>
+    <%= form.radio_button(:gender, "F") %>
+    <%= form.label(:gender_f, "Female") %>
+    <%= form.radio_button(:gender, "O") %>
+    <%= form.label(:gender_, "Other") %>
   </div>
 
   <div class="field">
@@ -43,13 +49,20 @@
 
   <div class="field">
     <%= form.label :birthday %>
-    <%= form.date_select :birthday %>
+    <%= form.date_select :birthday  %>
   </div>
 
   <div class="field">
     <%= form.label :address %>
     <%= form.text_field :address %>
   </div>
+
+  <% if current_user.is_admin %>
+    <div class="field">
+      <%= form.label :is_admin %>
+      <%= form.check_box(:is_admin) %>
+    </div>
+  <% end %>
 
   <div class="actions">
     <%= form.submit %>
