--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,5 +2,7 @@
 
 <%= render 'form', user: @user %>
 
+
+
 <%= link_to 'Show', @user, { :class=>"btn btn-primary" } %> |
-<%= link_to 'Back', users_path , { :class=>"btn btn-primary" }%>
+<%= link_to 'Back', projects_path , { :class=>"btn btn-primary" }%>
