--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -49,4 +49,4 @@
 <br>
 
 <%= link_to 'Edit', edit_user_path(@user) , { :class=>"btn btn-primary" }%>
-<%= link_to 'Back', users_path , { :class=>"btn btn-primary" }%>
+<%= link_to 'Back', projects_path , { :class=>"btn btn-primary" }%>
