--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -3,8 +3,8 @@
   <div style="float: left;">
     <%= image_tag @project.avatar.url(:medium) %>
   </div>
-  <div class="container" style="margin-left: 50px">
-  <div>
+  <div class="container">
+  <div style="float: left;margin-left: 50px">
   <p>
     <strong>Title:</strong>
     <%= @project.title %>
