committing for merging

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -49,13 +49,15 @@
     </p>
   </div>
   <div  style="display:table-cell; " >
+    <form action="projects/%s/users/%s" %s [@project.id, current_user.id]  >
       <button class="btn btn-primary" style="align-content: center;text-align: center; align-items: center">
-        Send your love & support!
-        <br>
-        (And money)
-        <br>
-        <i class="material-icons">plus_one</i> <i class="material-icons">favorite_border</i>
+          Send your love & support!
+          <br>
+          (And money)
+          <br>
+          <i class="material-icons">plus_one</i> <i class="material-icons">favorite_border</i>
       </button>
+    </form>
   </div>
 </div>
 <h3>Promises</h3>
