--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
         <img src="/assets/gato.png" height="59px" href="/">
       </div>
       <ul class="nav navbar-nav navbar-home navbar-light">
-        <li class=""><a href="/projects">Home</a></li>
+        <li class=""><a href="/">Home</a></li>
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Projects<span class="caret"></span></a>
           <ul class="dropdown-menu" style="background: white">
