--- a/app/views/user_fund_projects/new.html.erb
+++ b/app/views/user_fund_projects/new.html.erb
@@ -1,5 +1,32 @@
 <h1>New User Fund Project</h1>
 
-<%= render 'form', user_fund_project: @user_fund_project %>
+<%= form_for(@user_fund_project) do |form| %>
+  <% if user_fund_project.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(user_fund_project.errors.count, "error") %> prohibited this user_fund_project from being
+        saved:</h2>
+
+      <ul>
+        <% user_fund_project.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <div class="field">
+    <%= form.label  %>
+    <%= form.text_field :user_id %>
+  </div>
+
+  <div class="field">
+    <%= form.label :project_id %>
+    <%= form.text_field :project_id %>
+  </div>
+
+  <div class="actions">
+    <%= form.submit %>
+  </div>
+<% end %>
 
 <%= link_to 'Back', user_fund_projects_path  , { :class=>"btn btn-primary" } %>
