--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -49,19 +49,21 @@
     </p>
   </div>
   <div  style="display:table-cell; " >
-    <form action="projects/%s/users/%s" %s [@project.id, current_user.id]  >
-      <button class="btn btn-primary" style="align-content: center;text-align: center; align-items: center">
+      <button class="btn btn-primary" onclick="redirect()" style="align-content: center;text-align: center; align-items: center">
           Send your love & support!
           <br>
           (And money)
           <br>
           <i class="material-icons">plus_one</i> <i class="material-icons">favorite_border</i>
       </button>
-    </form>
+    <script>
+      function redirect() {
+      }
+    </script>
   </div>
 </div>
 <h3>Promises</h3>
-<% if (not @promises.nil?) && (not @promises.empty?) %> <!-- no se si esto esta bien, arreglar -->
+<% if not (@promises.nil? or @promises.empty?) %> <!-- no se si esto esta bien, arreglar -->
 <table class="table table-striped table-hover">
   <thead>
   <tr>
@@ -73,7 +75,6 @@
     <th colspan="3"></th>
   </tr>
   </thead>
-
   <tbody>
   <% @promises.each do |promise| %>
     <tr>
