--- a/app/views/projects/index_by_cat.html.erb
+++ b/app/views/projects/index_by_cat.html.erb
@@ -1,6 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Projects</h1>
+<h3><%= @category.name %></h3>
 
 <table class="table table-striped table-hover">
   <thead>
@@ -12,7 +13,6 @@
       <th>Currentamount</th>
       <th>Approved</th>
       <th>Deadline</th>
-      <th>Category</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -27,7 +27,6 @@
         <td><%= project.currentamount %></td>
         <td><%= project.approved %></td>
         <td><%= project.deadline %></td>
-        <td><%= project.category.name %></td>
         <td><%= link_to 'Show', project %></td>
         <% if user_signed_in? %>
           <% if current_user.is_admin %>
