--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -18,7 +18,7 @@
 
     <p>
       <strong>Description:</strong>
-      <%= @project.description %>
+      <%= markdown(@project.description) %>
     </p>
 
     <p>
