--- a/app/views/user_fund_projects/edit.html.erb
+++ b/app/views/user_fund_projects/edit.html.erb
@@ -1,6 +1,25 @@
-<h1>Editing User Fund Project</h1>
+<h1>Confirming Fund</h1>
 
-<%= render 'form', user_fund_project: @user_fund_project %>
+<%= form_for(@user_fund_project) do |form| %>
+  <% if  @user_fund_project.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize( @user_fund_project.errors.count, "error") %> prohibited this  @user_fund_project from being saved:</h2>
 
-<%= link_to 'Show', @user_fund_project   , { :class=>"btn btn-primary" }%> |
-<%= link_to 'Back', user_fund_projects_path   , { :class=>"btn btn-primary" }%>
+      <ul>
+        <%  @user_fund_project.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <h3 >
+    Hey <%= @user.name %>! You are confirming your fund to <%= @project.title %>
+  </h3>
+
+  <div class="actions">
+
+    <td><%= link_to "Confirm!", "/user_fund_project_confirm/"+ @user_fund_project.id.to_s + "?confirmed=true", class: "btn btn-primary btn-lg", method: :post %></td>
+  </div>
+<% end %>
+<%= link_to 'Home', root_path   , { :class=>"btn btn-primary" }%>
