Fund just for users

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -39,11 +39,16 @@
         <% end %>
     </p>
   </div>
-  <a href="localhost:3000/user_fund_project/projects/<%=@project.id%>">
+  <% if user_signed_in? %>
+<a href="localhost:3000/user_fund_project/projects/<%=@project.id%>">
   <div  style="display:table-cell; " >
     <%= link_to "Send your love & support! \n (And money)", "/user_fund_project/projects/"+ @project.id.to_s, class: "btn btn-primary"%>
   </div>
   </a>
+  <% end %>
+  <div>
+
+  </div>
 </div>
 <h3>Promises</h3>
 <% if not (@promises.nil? or @promises.empty?) %> <!-- no se si esto esta bien, arreglar -->
